// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The PaymentConfirmationForm component renders a loading indicator 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
    style={
      Object {
        "alignSelf": "center",
        "bottom": 0,
        "flex": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;

exports[`The PaymentConfirmationForm component renders correctly 1`] = `
<View>
  <View
    style={
      Object {
        "borderBottomColor": "rgba(221, 221, 221, 0.09999999999999998)",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#303030",
          "fontFamily": "Colfax-Regular",
          "fontSize": 14,
          "lineHeight": 15.78,
          "paddingBottom": 2.25,
          "paddingTop": 1.35,
        }
      }
    >
      Campus
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#303030",
          "fontFamily": "Colfax-Regular",
          "fontSize": 14,
          "lineHeight": 15.78,
          "paddingBottom": 2.25,
          "paddingTop": 1.35,
        }
      }
    >
      web
    </Text>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "rgba(221, 221, 221, 0.09999999999999998)",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#303030",
          "fontFamily": "Colfax-Bold",
          "fontSize": 20.02,
          "lineHeight": 25.33,
          "paddingBottom": 3.15,
          "paddingTop": 2.7,
        }
      }
    >
      General
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#303030",
          "fontFamily": "Colfax-Bold",
          "fontSize": 15.75,
          "lineHeight": 17.75,
          "paddingBottom": 1.8,
          "paddingTop": 2.25,
        }
      }
    >
      $
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#303030",
            "fontFamily": "Colfax-Bold",
            "fontSize": 20.02,
            "lineHeight": 25.33,
            "paddingBottom": 3.15,
            "paddingTop": 2.7,
          }
        }
      >
        253
      </Text>
      .
      00
    </Text>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "rgba(221, 221, 221, 0.09999999999999998)",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#303030",
          "fontFamily": "Colfax-Bold",
          "fontSize": 20.02,
          "lineHeight": 25.33,
          "paddingBottom": 3.15,
          "paddingTop": 2.7,
        }
      }
    >
      Total
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#303030",
          "fontFamily": "Colfax-Bold",
          "fontSize": 20.02,
          "lineHeight": 25.33,
          "paddingBottom": 3.15,
          "paddingTop": 2.7,
        }
      }
    >
      $
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#303030",
            "fontFamily": "Colfax-Bold",
            "fontSize": 25.2,
            "lineHeight": 31.28,
            "paddingBottom": 3.71,
            "paddingTop": 5.04,
          }
        }
      >
        253
      </Text>
      .
      00
    </Text>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    bold={false}
    ellipsizeMode="tail"
    italic={false}
    style={
      Object {
        "color": "#303030",
        "fontFamily": "DroidSerif-Regular",
        "fontSize": 20.02,
        "lineHeight": 33.11,
        "paddingBottom": 2.25,
        "paddingTop": 1.8,
      }
    }
  >
    Due to Apple policies, you'll be redirected to Safari to complete this contribution.
  </Text>
  <View
    accessibilityComponentType="button"
    accessibilityLabel={undefined}
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    collapsable={undefined}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      bordered={false}
      disabled={false}
      pill={true}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#6bac43",
          "borderColor": "#6bac43",
          "borderRadius": 60,
          "borderWidth": 2,
          "elevation": 2,
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "center",
          "opacity": 1,
          "overflow": "hidden",
          "paddingHorizontal": 20,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "Colfax-Bold",
            "fontSize": 20.02,
            "lineHeight": 25.33,
            "paddingBottom": 3.15,
            "paddingTop": 2.7,
          }
        }
      >
        Complete
      </Text>
    </View>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "color": "#6bac43",
        "textDecorationLine": "underline",
      }
    }
  >
    Change Payment Method
  </Text>
</View>
`;

exports[`The PaymentConfirmationForm component shows a paying state 1`] = `
<View>
  <View
    style={
      Object {
        "borderBottomColor": "rgba(221, 221, 221, 0.09999999999999998)",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#303030",
          "fontFamily": "Colfax-Regular",
          "fontSize": 14,
          "lineHeight": 15.78,
          "paddingBottom": 2.25,
          "paddingTop": 1.35,
        }
      }
    >
      Campus
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#303030",
          "fontFamily": "Colfax-Regular",
          "fontSize": 14,
          "lineHeight": 15.78,
          "paddingBottom": 2.25,
          "paddingTop": 1.35,
        }
      }
    >
      web
    </Text>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "rgba(221, 221, 221, 0.09999999999999998)",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#303030",
          "fontFamily": "Colfax-Bold",
          "fontSize": 20.02,
          "lineHeight": 25.33,
          "paddingBottom": 3.15,
          "paddingTop": 2.7,
        }
      }
    >
      General
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#303030",
          "fontFamily": "Colfax-Bold",
          "fontSize": 15.75,
          "lineHeight": 17.75,
          "paddingBottom": 1.8,
          "paddingTop": 2.25,
        }
      }
    >
      $
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#303030",
            "fontFamily": "Colfax-Bold",
            "fontSize": 20.02,
            "lineHeight": 25.33,
            "paddingBottom": 3.15,
            "paddingTop": 2.7,
          }
        }
      >
        253
      </Text>
      .
      00
    </Text>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "rgba(221, 221, 221, 0.09999999999999998)",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#303030",
          "fontFamily": "Colfax-Bold",
          "fontSize": 20.02,
          "lineHeight": 25.33,
          "paddingBottom": 3.15,
          "paddingTop": 2.7,
        }
      }
    >
      Total
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#303030",
          "fontFamily": "Colfax-Bold",
          "fontSize": 20.02,
          "lineHeight": 25.33,
          "paddingBottom": 3.15,
          "paddingTop": 2.7,
        }
      }
    >
      $
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#303030",
            "fontFamily": "Colfax-Bold",
            "fontSize": 25.2,
            "lineHeight": 31.28,
            "paddingBottom": 3.71,
            "paddingTop": 5.04,
          }
        }
      >
        253
      </Text>
      .
      00
    </Text>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    bold={false}
    ellipsizeMode="tail"
    italic={false}
    style={
      Object {
        "color": "#303030",
        "fontFamily": "DroidSerif-Regular",
        "fontSize": 20.02,
        "lineHeight": 33.11,
        "paddingBottom": 2.25,
        "paddingTop": 1.8,
      }
    }
  >
    Due to Apple policies, you'll be redirected to Safari to complete this contribution.
  </Text>
  <View
    accessibilityComponentType="button"
    accessibilityLabel={undefined}
    accessibilityTraits={
      Array [
        "button",
        "disabled",
      ]
    }
    accessible={true}
    collapsable={undefined}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      bordered={false}
      disabled={false}
      pill={true}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#6bac43",
          "borderColor": "#6bac43",
          "borderRadius": 60,
          "borderWidth": 2,
          "elevation": 2,
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "center",
          "opacity": 1,
          "overflow": "hidden",
          "paddingHorizontal": 20,
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="#ffffff"
        hidesWhenStopped={true}
        size="small"
      />
    </View>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "color": "#6bac43",
        "textDecorationLine": "underline",
      }
    }
  >
    Change Payment Method
  </Text>
</View>
`;

exports[`The PaymentConfirmationForm component shows a scheduled contribution 1`] = `
<View>
  <View
    style={
      Object {
        "borderBottomColor": "rgba(221, 221, 221, 0.09999999999999998)",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#303030",
          "fontFamily": "Colfax-Regular",
          "fontSize": 14,
          "lineHeight": 15.78,
          "paddingBottom": 2.25,
          "paddingTop": 1.35,
        }
      }
    >
      Campus
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#303030",
          "fontFamily": "Colfax-Regular",
          "fontSize": 14,
          "lineHeight": 15.78,
          "paddingBottom": 2.25,
          "paddingTop": 1.35,
        }
      }
    >
      web
    </Text>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "rgba(221, 221, 221, 0.09999999999999998)",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#303030",
          "fontFamily": "Colfax-Bold",
          "fontSize": 20.02,
          "lineHeight": 25.33,
          "paddingBottom": 3.15,
          "paddingTop": 2.7,
        }
      }
    >
      General
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#303030",
          "fontFamily": "Colfax-Bold",
          "fontSize": 15.75,
          "lineHeight": 17.75,
          "paddingBottom": 1.8,
          "paddingTop": 2.25,
        }
      }
    >
      $
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#303030",
            "fontFamily": "Colfax-Bold",
            "fontSize": 20.02,
            "lineHeight": 25.33,
            "paddingBottom": 3.15,
            "paddingTop": 2.7,
          }
        }
      >
        253
      </Text>
      .
      00
    </Text>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "rgba(221, 221, 221, 0.09999999999999998)",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 10,
      }
    }
  >
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#303030",
            "fontFamily": "Colfax-Bold",
            "fontSize": 20.02,
            "lineHeight": 25.33,
            "paddingBottom": 3.15,
            "paddingTop": 2.7,
          }
        }
      >
        Schedule Details
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#303030",
            "fontFamily": "Colfax-Regular",
            "fontSize": 14,
            "lineHeight": 15.78,
            "paddingBottom": 2.25,
            "paddingTop": 1.35,
          }
        }
      >
        Frequency: 
        once a month
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#303030",
            "fontFamily": "Colfax-Regular",
            "fontSize": 14,
            "lineHeight": 15.78,
            "paddingBottom": 2.25,
            "paddingTop": 1.35,
          }
        }
      >
        Starting: 
        10/20/2120
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "rgba(221, 221, 221, 0.09999999999999998)",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#303030",
          "fontFamily": "Colfax-Bold",
          "fontSize": 20.02,
          "lineHeight": 25.33,
          "paddingBottom": 3.15,
          "paddingTop": 2.7,
        }
      }
    >
      Total
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#303030",
          "fontFamily": "Colfax-Bold",
          "fontSize": 20.02,
          "lineHeight": 25.33,
          "paddingBottom": 3.15,
          "paddingTop": 2.7,
        }
      }
    >
      $
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#303030",
            "fontFamily": "Colfax-Bold",
            "fontSize": 25.2,
            "lineHeight": 31.28,
            "paddingBottom": 3.71,
            "paddingTop": 5.04,
          }
        }
      >
        253
      </Text>
      .
      00
    </Text>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    bold={false}
    ellipsizeMode="tail"
    italic={false}
    style={
      Object {
        "color": "#303030",
        "fontFamily": "DroidSerif-Regular",
        "fontSize": 20.02,
        "lineHeight": 33.11,
        "paddingBottom": 2.25,
        "paddingTop": 1.8,
      }
    }
  >
    Due to Apple policies, you'll be redirected to Safari to complete this contribution.
  </Text>
  <View
    accessibilityComponentType="button"
    accessibilityLabel={undefined}
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    collapsable={undefined}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      bordered={false}
      disabled={false}
      pill={true}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#6bac43",
          "borderColor": "#6bac43",
          "borderRadius": 60,
          "borderWidth": 2,
          "elevation": 2,
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "center",
          "opacity": 1,
          "overflow": "hidden",
          "paddingHorizontal": 20,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "Colfax-Bold",
            "fontSize": 20.02,
            "lineHeight": 25.33,
            "paddingBottom": 3.15,
            "paddingTop": 2.7,
          }
        }
      >
        Complete
      </Text>
    </View>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "color": "#6bac43",
        "textDecorationLine": "underline",
      }
    }
  >
    Change Payment Method
  </Text>
</View>
`;
